[project]
name = "demo-wedding-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
    "loguru>=0.7.3",
    "openai>=1.109.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]
