[project]
name = "demo-wedding-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "loguru>=0.7.3",
    "openai>=2.7.1",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.15.1",
    "streamlit>=1.51.0",
    "tavily-python>=0.7.12",
]
